Fix month center align

--- a/components/age/index.css
+++ b/components/age/index.css
@@ -82,7 +82,10 @@
 
   .Age-option--month  .Age-label {
     transform-origin: center;
-    transform: rotate(-90deg) translateX(-50%);
+    transform: translate(-50%, -50%) rotate(-90deg);
+    position: absolute;
+    left: 50%;
+    top: 50%;
   }
 }
 
